Add Dalliance view in /trackhub

--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
  "author": "Denise Mauldin <denisemauldin> and Kristopher Skelton <kmskelton>",
  "license": "MIT",
  "scripts": {
-  "build-dev": "npm run clean-dist && npm run build-dev-client && npm run build-dev-server && npm run create-upload-dir",
+  "build-biodalliance": "npx webpack ./src/biodalliance/index.js -o ./dist/assets/dalliance.js -p --display errors-only",
+  "build-dev": "npm run clean-dist && npm run build-dev-client && npm run build-dev-server && npm run build-biodalliance",
   "build-dev-client": "npx webpack --progress --colors --config webpack.client.dev.config.js",
   "build-dev-server": "npx webpack --progress --colors --config webpack.server.dev.config.js",
-  "build-prod": "npm run clean-dist && npm run build-prod-client && npm run build-prod-server && npm run create-upload-dir",
+  "build-prod": "npm run clean-dist && npm run build-prod-client && npm run build-prod-server && npm run build-biodalliance",
   "build-prod-client": "npx webpack --progress --colors --config webpack.client.prod.config.js",
   "build-prod-server": "npx webpack --progress --colors --config webpack.server.prod.config.js",
-  "create-upload-dir": "mkdir -p ./dist/assets/uploads",
   "clean-dist": "npx rimraf ./dist/*",
   "start-prod": "NODE_ENV=production node dist/server.js",
   "start-dev": "NODE_ENV=development node dist/server.js",
