--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "csvtojson": "^2.0.3",
   "dotenv": "^6.0.0",
   "express": "^4.16.3",
+  "firebase": "^5.4.2",
   "formidable": "^1.2.1",
   "gsap": "^1.20.4",
   "helmet": "^3.13.0",
